# smart-pointers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doc-generator.md  fpm.toml  index.html  index.md  search.html
app/: testfinal.f90
doc/: README.md  class_diagram.puml  paper.md
example/: README.md  demo.f90  shallow.f90  smart_pointer.f90  specification_expression_finalization.f90  user_object_ab_smart_pointer.f90  user_object_smart_pointer.f90
interface/: assert.html  assign_ref_counter.html  assign_sp_reference_counter.html  free_interface.html  grab.html  ref_counter_t.html  reference_count.html  reference_count~2.html  release.html  release_handle.html  sp_reference_counter_t.html  start_counter.html  start_ref_counter.html
lists/: absint.html  files.html  modules.html  procedures.html  types.html
media/: text-art.txt
module/: assert_m.html  assert_s.html  ref_counter_m.html  ref_counter_s.html  ref_reference_m.html  ref_reference_s.html  ref_resource_m.html  reference_counter_m.html  smart_pointer_m.html  sp_reference_counter_m.html  sp_reference_counter_s.html  sp_resource_m.html  sp_smart_pointer_m.html  sp_smart_pointer_s.html
proc/: assert.html  assign_ref_counter.html  assign_sp_reference_counter.html  construct.html  finalize.html  grab.html  reference_count.html  reference_count~2.html  release.html  release_handle.html  start_counter.html  start_ref_counter.html
reproducer/: reproducer.F90  reproducer.f90
sourcefile/: assert_m.f90.html  assert_s.f90.html  ref_counter_m.f90.html  ref_counter_s.f90.html  ref_reference_m.f90.html  ref_reference_s.f90.html  ref_resource_m.f90.html  reference_counter_m.f90.html  smart_pointer_m.f90.html  sp_reference_counter_m.f90.html  sp_reference_counter_s.f90.html  sp_resource_m.f90.html  sp_smart_pointer_m.f90.html  sp_smart_pointer_s.f90.html
src/: CMakeLists.txt  assert_m.F90  freeable_resource_m.f90  hermetic.f90  main.f90  ref_counter.f90  ref_reference_m.f90  ref_reference_s.f90  ref_resource_m.f90  reference_counted_resource_m.f90  reference_counted_resource_s.f90  reference_counter_m.f90  reference_counter_s.f90  reference_counter_utility_m.f90  smart_pointer_m.f90  sp_reference_counter_s.f90  universal.f90  vector.f90
test/: README.md  compiler-conformance-check.f90  compiler_test.f90  compiler_test_m.F90  (+14 more)
(+43 files in other folders)
